haskell/preprocessing: add homework 1

--- a/haskell/preprocessing/package.yaml
+++ b/haskell/preprocessing/package.yaml
@@ -1,23 +1,5 @@
 name:                preprocessing
 version:             0.1.0.0
-github:              "githubuser/preprocessing"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2018 Author name here"
-
-extra-source-files:
-- README.md
-- ChangeLog.md
-
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on Github at <https://github.com/githubuser/preprocessing#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -26,9 +8,20 @@ library:
   source-dirs: src
 
 executables:
-  preprocessing-exe:
+
+  homework1:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:         homework1
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - preprocessing
+
+  example1:
+    main:                Main.hs
+    source-dirs:         example1
     ghc-options:
     - -threaded
     - -rtsopts
