--- a/haskell/preprocessing/package.yaml
+++ b/haskell/preprocessing/package.yaml
@@ -9,19 +9,9 @@ library:
 
 executables:
 
-  homework1:
+  preprocess:
     main:                Main.hs
-    source-dirs:         homework1
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - preprocessing
-
-  example1:
-    main:                Main.hs
-    source-dirs:         example1
+    source-dirs:         app
     ghc-options:
     - -threaded
     - -rtsopts
